--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
+# Mac OS X
 .DS_Store
-**/venv/
-set-up-secrets.sh
-**/__pycache__/
-Notes.md
-migrations/
-Dockerfile
-env.list
+
+# Support resources
+notes.md
